# vibediff

./: .gitignore  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: vibediff_comment.py
.github/workflows/: backend-cloud-ci.yml  core-ci.yml  frontend-cloud-ci.yml  python-release.yml  vibediff-check.yml
backend-cloud/: README.md  package-lock.json  package.json
backend-cloud/src/: index.ts
contracts/: README.md  v1-assertion-record.schema.json  v1-sanitized-entity.schema.json
core/: Cargo.toml  README.md  pyproject.toml
core/benches/: analysis_bench.rs
core/src/: lib.rs  main.rs
core/src/ast/: css_impact.rs  dependency_graph.rs  engine.rs  entity_mapper.rs  mod.rs  upwalker.rs
core/src/ast/languages/: go.rs  python.rs  rust.rs  typescript.rs
core/src/cache/: ast_cache.rs  mod.rs
core/src/config/: mod.rs  vibediff_config.rs
core/src/git/: diff_parser.rs  facade.rs  intent.rs  mod.rs
core/src/report/: cli_reporter.rs  mod.rs  sarif_reporter.rs
core/src/scorer/: assertion_record.rs  llm_bridge.rs  mod.rs  prompt_builder.rs  vibe_scorer.rs
core/tests/: assertion_record_tests.rs  ast_engine_tests.rs  ollama_e2e_tests.rs
docs/: CI_SELFHOSTED.md  CLOUD_TEAM_IMPLEMENTATION_PLAN.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  ISSUE_GUIDE.md  LICENSE.md  USER_GUIDE.md
frontend-cloud/: README.md  package-lock.json  package.json  tsconfig.json
frontend-cloud/app/: page.tsx
