[package]
name = "vibediff_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
toml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
dashmap = "6"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "analysis_bench"
harness = false

[[bin]]
name = "vibediff"
path = "src/main.rs"
